Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-49709

When going from Maximized to FullScreen then calling showNormal(), the window is not back to the maximized state

XMLWordPrintable

    • e3288f246b44ba2b6d90b90eb99ab61f496d8d57 (qtbase/5.6, 28.12.2015, 5.6), ae572a980883cc96d5594b8f679aa5471a01843d (qtbase/5.6, 29.1.2016, 5.6)

      When going from Maximized to FullScreen then calling showNormal(), the window is not back to the maximized state. What happens is that it is shown as a normal window but resized to take the size of the desktop.

        1. Qt4_8_7.mp4
          238 kB
          Błażej Szczygieł
        2. Qt5_6_with_patch_e3288f246b44ba2b6d90b90eb99ab61f496d8d57.mp4
          368 kB
          Błażej Szczygieł
        3. Qt5_without_patch_e3288f246b44ba2b6d90b90eb99ab61f496d8d57.mp4
          223 kB
          Błażej Szczygieł
        4. qtbug49709_2_log.txt
          7 kB
          Friedemann Kleint
        5. qtbug49709_2.zip
          2 kB
          Friedemann Kleint
        6. qtbug49709_diag.diff
          5 kB
          Friedemann Kleint
        7. qtbug49709_full_diag.diff
          7 kB
          Friedemann Kleint
        8. qtbug49709_log.txt
          4 kB
          Friedemann Kleint
        9. qtbug49709_windowpos_diag.diff
          6 kB
          Friedemann Kleint
        10. qtbug49709.zip
          2 kB
          Friedemann Kleint
        11. qtbug49709.zip
          0.7 kB
          Andy Shaw
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kleint Friedemann Kleint
            andysh Andy Shaw
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes