Windows: Restore window geometry after normal->maximized->fullscreen->normal.

- Do not save geometry when going from maximized->fullscreen
- Use SW_SHOWNA instead SW_SHOWNOACTIVATE as otherwise the
  maximized geometry is restored.
- Add a test for Windows.

Task-number: QTBUG-49709
Change-Id: Ic81e7398ee90d499a50b02192a45cb09276a2105
Reviewed-by: Joerg Bornemann <joerg.bornemann@theqtcompany.com>

cregit: e3288f246b44ba2b6d90b90eb99ab61f496d8d57 https://github.com/qt/qtbase/commit/e3288f246b44ba2b6d90b90eb99ab61f496d8d57